--- a/app/views/home/lookerbook.js.erb
+++ b/app/views/home/lookerbook.js.erb
@@ -10,6 +10,7 @@
   }
 
   function startHacking() {
+    alert('new');
     var selectors = ['#lk-nav-main','.alert-banner','#lk-control', '.lk-bar.filters', '.lk-vis-table-stuck-header-wrapper'];
     var selector;
 
