--- a/app/views/home/lookerbook.js.erb
+++ b/app/views/home/lookerbook.js.erb
@@ -10,7 +10,7 @@
   }
 
   function startHacking() {
-    var selectors = ['#lk-nav-main','.alert-banner','#lk-control', '.lk-bar.filters', '.lk-vis-table-stuck-header-wrapper'];
+    var selectors = ['#lk-nav-main','.alert-banner','#lk-control', '.lk-bar.filters', '.lk-vis-table-stuck-header-wrapper', '.select2-hidden-accessible'];
     var selector;
 
     for(var i = 0; i< selectors.length; i++) {
