add more things to hide due to looker side changes

--- a/app/views/home/lookerbook.js.erb
+++ b/app/views/home/lookerbook.js.erb
@@ -11,7 +11,7 @@
 
   function startHacking() {
     // Hide elements
-    var selectors = ['#lk-nav-main','.alert-banner','#lk-control', '.lk-bar.filters', '.lk-vis-table-stuck-header-wrapper', '.select2-hidden-accessible', '.explore-section'];
+    var selectors = ['#lk-nav-main','.alert-banner','#lk-control', '.lk-bar.filters', '.lk-vis-table-stuck-header-wrapper', '.select2-hidden-accessible', '.explore-section', '.dropdown', '.lk-sub-nav', '.lk-title-controls'];
     var selector;
 
     for(var i = 0; i< selectors.length; i++) {
